# Tricca_AutoPipette

./: .gitignore  .tap_shell_history  AutoPipette.py  CLAUDE.md  PipetteApp.py  README.md  TipBox.py  app.py  coordinates.py  main.py  movement.py  my-styles.css  pipette.py  pipettev2.py  printer.cfg  protocols.py  pyproject.toml  pyvenv.cfg  requirements.txt  volumes.py
Tricca_AutoPipette/: .init_pipette  .tap_shell_history  =2.0  AutoPipette.py  Coordinate.py  GCodeGenerator.py  PipetteApp.py  Plates.py  ProtocolCommands.py  QueryMoonraker.py  VialHolder.py  WellPlate.py  async_manager.py  autopipette.py  autopipette_shell.py  command_set_pipette.py  config_manager.py  controller.py  coordinate.py  curve_generator.py  demo_mode.py  enduser.py  gcode_buffer.py  gcode_generator.py  gcode_manager.py  json_config_manager.py  location_manager.py  moonraker_requests.py  my-styles.css  pipette_app.py  pipette_constants.py  pipette_exceptions.py  pipette_models.py  plates.py  print_volume_equation.py  protocol_commands.py  protocolcommands.py  protocols.py  simple_controller.py  tap_cmd_parsers.py  (+21 more)
Tricca_AutoPipette/commands/: __init__.py  configuration_commands.py  (+6 more)
autopipette_kiosk/: main.py
conf/: README.md  Tyson-100.conf  Tyson-1000.conf  autopipette-2.conf  autopipette-3.conf  autopipette-tyson.conf  autopipette.conf  autopipette.conf-test  calibration.conf  glass-pipette.conf  hand-pipette.conf  kit-manufacturing-pt1.conf  kit-manufacturing-pt2.conf  kit-manufacturing-pt3.conf  kit-manufacturing-pt4.conf  kit-manufacturing-pt5-pt1.conf  kit-manufacturing-pt5-pt2.conf  kit-manufacturing-pt6.conf  kit_manufacturing_pt1.conf  murphy-100.conf  panel-a-100-local.conf  panel-a-100.conf  panel-a.conf  pipette_p100.conf  pipette_p1000-16.conf  pipette_p1000.conf  tapv2_tiptest.conf  test.conf  tyson-100-test.conf  tyson-100.conf  tyson-1000.conf  tyson-panel-a-manufacturing.conf  tyson-panel-a-pip100.conf  tyson-panel-a-pip1000.conf  vol-test-10.conf  vol-test-100-a.conf  vol-test-100-b.conf  vol-test-100.conf  vol-test-1000.conf  vol-test-tyson-1000.conf  (+3 more)
config/: README.md
docs/: Coordinate.rst  WellPlate.rst  api.rst  conf.py  index.rst  modules.rst  volumes.rst
gcode/: home.gcode  kit_prep.gcode  test.gcode  test_move.gcode  test_rail.gcode  test_sphere.gcode  test_tip.gcode  test_vol0.gcode  test_vol1.gcode  test_vol2.gcode  test_vol3.gcode
panelA_programs/: A1.pipette  A10.pipette  A13.pipette  A16.pipette  A4.pipette  prep.pipette  step0B-2.pipette  step1B-2.pipette  step2B-2.pipette
programs/: README.md  calibration.pipette  kit_manufacturing_pt5_pt1.pipette  kit_manufacturing_pt5_pt2.pipette  kit_manufacturing_pt6_old.pipette  kit_manufacturing_pt6_pt2.pipette  test_avg_time_aspirate.pipette  test_avg_time_no_aspirate.pipette  test_move.pipette  test_pickup_dispense.pipette  test_sphere.py.pipette  test_vol0.pipette  test_vol2.pipette  test_vol3.pipette
protocols/: 0B-2_S.pipette  0B_S.pipette  0B_SNP.pipette  0PB-1.pipette  0PB-2.pipette  0PB-3.pipette  1B-2_S.pipette  1B_S.pipette  1B_S_fast.pipette  1B_Stan2.pipette  2B-2_S.pipette  2B_S.pipette  3B_S.pipette  3GB.pipette  4B_S.pipette  4B_SNP.pipette  4GB.pipette  5B_S.pipette  5GB.pipette  96-times-in-a-row.pipette  A1-2Com.pipette  A1-2_S.pipette  A1-2_SCom.pipette  A1-4_S.pipette  A1.pipette  A10.pipette  A10_S.pipette  A10_Sfast.pipette  A13.pipette  A13_S.pipette  A14.pipette  A14_10_S.pipette  A14_10_SNP.pipette  A14_50_S.pipette  A14_50_SNP.pipette  A15.pipette  A15_S.pipette  A16.pipette  A16_S.pipette  A2.pipette  (+133 more)
rec/: README.md
systemd/: README.md  autopipette-kiosk.service  tapd.service
(+180 files in other folders)
